Add option to downmix FFMS audio
When enabled, restore FFMS to old behavior, downmixing auduo to S16 mono. This can reduce cache usage.

Fix wangqr/Aegisub#31

--- a/src/libresrc/default_config.json
+++ b/src/libresrc/default_config.json
@@ -331,7 +331,8 @@
 				"Sample Rate" : 0
 			},
 			"FFmpegSource" : {
-				"Decode Error Handling" : "ignore"
+				"Decode Error Handling" : "ignore",
+				"Downmix" : false
 			}
 		},
 		"Avisynth" : {
