Fix build issue with AviSynth on linux

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -558,9 +558,13 @@ if(WITH_AVISYNTH)
     endif()
 endif()
 if(WITH_AVISYNTH)
-    target_compile_definitions(Aegisub PRIVATE "WITH_AVISYNTH" "AVS_LINKAGE_DLLIMPORT")
+    target_compile_definitions(Aegisub PRIVATE "WITH_AVISYNTH")
     target_include_directories(Aegisub PRIVATE ${AviSynth_INCLUDE_DIRS})
-    target_link_libraries(Aegisub Vfw32 ${AviSynth_LIBRARIES})
+    if(WIN32)
+        target_link_libraries(Aegisub Vfw32)
+    endif()
+    get_filename_component(Avisynth_LIBRARY_NAME "${AviSynth_SHARED_LIBRARY}" NAME CACHE)
+    target_compile_definitions(Aegisub PRIVATE "AVISYNTH_SO=\"${Avisynth_LIBRARY_NAME}\"")
     target_sources(Aegisub PRIVATE src/audio_provider_avs.cpp src/avisynth_wrap.cpp src/video_provider_avs.cpp)
 endif()
 
