--- a/.travis.yml
+++ b/.travis.yml
@@ -54,7 +54,7 @@ script:
     export PATH="/usr/local/opt/gettext/bin:/usr/local/opt/icu4c/sbin:/usr/local/opt/icu4c/bin:$PATH";
     export CPPFLAGS="-I/usr/local/opt/gettext/include -I/usr/local/opt/icu4c/include";
     export LDFLAGS="-L/usr/local/opt/gettext/lib -L/usr/local/opt/icu4c/lib";
-    export ACLOCAL_PATH="/usr/local/opt/gettext/share/aclocal"
+    export ACLOCAL_PATH="/usr/local/opt/gettext/share/aclocal";
     export PKG_CONFIG_PATH="/usr/local/opt/icu4c/lib/pkgconfig";
     ./autogen.sh;
     ./configure --enable-debug || cat config.log;
