Fix missing config option for Align on macOS

--- a/src/libresrc/osx/default_config.json
+++ b/src/libresrc/osx/default_config.json
@@ -576,6 +576,10 @@
 		},
 		"Visual" : {
 			"Autohide": false
+		},
+		"Align to Video" : {
+			"Tolerance" : 20,
+			"Maximized" : true
 		}
 	},
 
