Change default audio output to XAudio2 on Windows
Downmix defaults to disabled on non-Windows OSes, because we don't support non-mono output at the moment

--- a/src/libresrc/default_config.json
+++ b/src/libresrc/default_config.json
@@ -332,7 +332,7 @@
 			},
 			"FFmpegSource" : {
 				"Decode Error Handling" : "ignore",
-				"Downmix" : false
+				"Downmix" : true
 			}
 		},
 		"Avisynth" : {
