--- a/src/libresrc/default_config_win.json
+++ b/src/libresrc/default_config_win.json
@@ -1,6 +1,13 @@
 {
 	"Audio" : {
-		"Player" : "DirectSound"
+		"Player" : "XAudio2"
+	},
+	"Provider" : {
+		"Audio" : {
+			"FFmpegSource" : {
+				"Downmix" : false
+			}
+		}
 	},
 	"Subtitle" : {
 		"Provider" : "CSRI/xy-vsfilter_aegisub"
