Fix uchardet enable macro
It should be applied to libaegisub

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -660,9 +660,9 @@ find_package(uchardet)
 option(WITH_UCHARDET "Enable uchardet support" ${uchardet_FOUND})
 if(WITH_UCHARDET)
     find_package(uchardet REQUIRED)
-    target_compile_definitions(Aegisub PRIVATE "WITH_UCHARDET")
-    target_include_directories(Aegisub PRIVATE ${uchardet_INCLUDE_DIRS})
-    target_link_libraries(Aegisub LINK_PRIVATE ${uchardet_LIBRARIES})
+    target_compile_definitions(libaegisub PRIVATE "WITH_UCHARDET")
+    target_include_directories(libaegisub PRIVATE ${uchardet_INCLUDE_DIRS})
+    target_link_libraries(libaegisub PRIVATE ${uchardet_LIBRARIES})
 endif()
 
 option(WITH_UPDATE_CHECKER "Enable update checker")
