--- a/.travis.yml
+++ b/.travis.yml
@@ -88,7 +88,7 @@ script:
   else
     mkdir build-dir;
     cd build-dir;
-    cmake -DCMAKE_CXX_FLAGS='-Wall -Wextra -Wno-unused-parameter -pedantic' -DCMAKE_C_FLAGS='-Wall' -DWITH_STARTUPLOG=ON -DWITH_TEST=ON ..;
+    cmake -DCMAKE_CXX_FLAGS='-Wall -Wextra -Wno-unused-parameter -pedantic' -DCMAKE_C_FLAGS='-Wall -Wextra -Wno-unused-parameter' -DWITH_STARTUPLOG=ON -DWITH_TEST=ON ..;
     make -j2 || travis_terminate 1;
     make test || travis_terminate 1;
   fi
