--- a/.travis.yml
+++ b/.travis.yml
@@ -49,6 +49,8 @@ addons:
     - luarocks
     - m4
     - wxmac
+    - hunspell
+    - uchardet
     update: true
 
 env:
@@ -60,7 +62,7 @@ env:
 jobs:
   include:
     - os: osx
-      osx_image: xcode11.4
+      osx_image: xcode11.5
       env: BUILD_SUIT=autotools
 
 install:
