--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -569,6 +569,13 @@ if(WIN32)
     if(WITH_XAUDIO2)
         target_compile_definitions(Aegisub PRIVATE "WITH_XAUDIO2")
         target_sources(Aegisub PRIVATE src/audio_player_xaudio2.cpp)
+        option(XAUDIO2_REDIST "Use XAudio redistributable")
+        if(XAUDIO2_REDIST)
+            find_package(XAudio2redist REQUIRED)
+            target_compile_definitions(Aegisub PRIVATE "XAUDIO2_REDIST")
+            target_include_directories(Aegisub PRIVATE ${XAudio2redist_INCLUDE_DIRS})
+            target_link_libraries(Aegisub PRIVATE ${XAudio2redist_LIBRARIES})
+        endif()
     endif()
 else()
     set(WITH_DIRECTSOUND OFF)
