--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,10 @@ build-dir
 vendor/exten/harfbuzz/test/
 vendor/exten/harfbuzz/test/*
 *.obj
-*.pdb
 *.log
 *.tlog/
 vendor/exten/harfbuzz/tests/
 /vendor/exten/hunspell/tests
+/vendor/exten/fribidi-1.0.10/build/gen.tab
 /vendor/exten/libiconv/tests
+/vendor/exten/fribidi-1.0.10/build/lib/*@@fribidi@sha
