Smooth Scrolling [foolo]:   - I'm actually not sure what difference it actually makes really, still trying to find out.

--- a/src/libresrc/default_config.json
+++ b/src/libresrc/default_config.json
@@ -62,6 +62,7 @@
 		"Line Boundaries Thickness" : 2,
 		"Link" : true,
 		"Lock Scroll on Cursor" : false,
+		"Smooth Scrolling" : false,
 		"Medusa Timing Hotkeys" : false,
 		"Next Line on Commit" : true,
 		"Player" : "",
