Update libass, More work on Video Panning (Not Done)  - Updated Scripts with recursive function  - Add Unicode 6.3+ bracket matching option for libass

--- a/src/libresrc/default_config.json
+++ b/src/libresrc/default_config.json
@@ -19,7 +19,8 @@
         "Toolbar Icon Size": 16
     },
     "Experiments": {
-        "Video Pan": false
+        "Video Pan": false,
+        "Unicode63 Bracket Matching": false
     },
 
 
